--- a/css/main.css
+++ b/css/main.css
@@ -1288,6 +1288,29 @@ input::-moz-focus-inner {
   top: 50%;
 }
 
+.home-content h4 {
+  font-family: "myanmar-text";
+  font-size: 1.4rem;
+  line-height: 1.286;
+  letter-spacing: .3rem;
+  color: white;
+  margin-top: 0;
+  margin-bottom: 3rem;
+  padding-left: 55px;
+  position: relative;
+}
+
+.home-content h4::before {
+  content: "";
+  display: block;
+  background-color: rgba(236, 0, 140, 0.6);
+  width: 40px;
+  height: 1px;
+  position: absolute;
+  left: 0;
+  top: 50%;
+}
+
 .home-content h1 {
   font-size: 6.4rem;
   line-height: 1.219;
