--- a/css/main.css
+++ b/css/main.css
@@ -1318,6 +1318,8 @@ input::-moz-focus-inner {
   margin-top: 6.6rem;
   margin-right: 5%;
   margin-left: 5%;
+  word-break: break-all;
+  animation: fadeIn 3s;
 }
 
 .home-content__subscribe {
