--- a/css/main.css
+++ b/css/main.css
@@ -1312,7 +1312,7 @@ input::-moz-focus-inner {
 }
 
 .huehuehue-our__textx h4 {
-  font-family: Calibri
+  font-family: Arial;
   font-size: 2rem;
   line-height: 2;
   color: rgba(255, 255, 255, 1);
